<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_rs_kleiner"
        tools:ignore="MissingConstraints,ImageContrastCheck"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageButton
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/btn_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/retornar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089"
        app:srcCompat="@drawable/img_158932"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/idquestionattempted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/num_questions"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TVQuestion"
        android:layout_below="@+id/idquestionattempted"
        android:layout_marginTop="30dp"
        android:text="@string/question"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/idTVQuestion"
        android:layout_width="800dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVQuestion"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="140dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/idBtnOpt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_1"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck"/>

        <Button
            android:id="@+id/idBtnOpt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_2"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck"/>

        <Button
            android:id="@+id/idBtnOpt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_3"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck"/>

        <Button
            android:id="@+id/idBtnOpt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="4dp"
            android:text="@string/option_4"
            android:textAllCaps="false"
            tools:ignore="TextContrastCheck"/>
    </LinearLayout>


</RelativeLayout>