<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".kraftwerk">

    <ImageButton
        android:id="@+id/btn_return"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:src="@drawable/tab_return"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/title_kw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_marginTop="37sp"
        android:text="@string/kraftwerk"
        android:textColor="#F9F9F9"
        android:textSize="25sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="130dp"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_marginTop="40dp"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:contentDescription="@string/btn_ico_wasserkraft"
            tools:ignore="SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:scaleType="fitStart"
                    android:src="@drawable/krft_eins" />

                <ImageView
                    android:id="@+id/second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:scaleType="fitStart"
                    android:src="@drawable/krft_zwei" />

                <ImageView
                    android:id="@+id/third"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:backgroundTint="#00FFFFFF"
                    android:scaleType="fitStart"
                    android:src="@drawable/krft_drei" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="591dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_kraftwerk"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>